# 5633-kafka

1 - kafka/checkout-commerce/: README.md  docker-compose.yml  pyproject.toml  request.http
1 - kafka/checkout-commerce/app/infra/: database.py
2 - Produzir mensagens/1 - checkout-commerce/checkout-commerce/app/checkout/: checkout_process.py  checkout_request.py
2 - Produzir mensagens/3 - checkout-commerce/checkout-commerce/: docker-compose.yml  pyproject.toml
2 - Produzir mensagens/3 - checkout-commerce/checkout-commerce/app/: main.py
2 - Produzir mensagens/3 - checkout-commerce/checkout-commerce/app/checkout/: router.py
2 - Produzir mensagens/4 - checkout-commerce/checkout-commerce/app/checkout/: checkout_model.py
2 - Produzir mensagens/5 - checkout-commerce/checkout-commerce/app/: main.py
2 - Produzir mensagens/5 - checkout-commerce/checkout-commerce/app/checkout/: checkout_process.py
3 - consumir mensagens/2 - payment-consumer/payment-consumer/: main.py
3 - consumir mensagens/5 - checkout-commerce/checkout-commerce/: request.http
3 - consumir mensagens/5 - payment-consumer/payment-consumer/: checkout_message.py  consumer.py  pyproject.toml
3 - consumir mensagens/6 - payment-consumer/payment-consumer/: consumer.py
3 - consumir mensagens/7 - payment-consumer/payment-consumer/: consumer.py  main.py
3 - consumir mensagens/8 - payment-consumer/payment-consumer/: consumer.py
4 - checkout-commerce/checkout-commerce/: run-dev.sh
5 - checkout-commerce/checkout-commerce/app/: client_manager.py
(+7 files in other folders)
